fix taps in cucumbers but not flows
Signed-off-by: Thomas Bouquet <thomas.bouquet@rte-france.com>